fixed logout button colour in navbar on gap confirm and info page + changed gap confirm save and exit to log out

--- a/gap_project/frontend/src/css/NavBar.css
+++ b/gap_project/frontend/src/css/NavBar.css
@@ -199,7 +199,7 @@
   height: 30px;
 }
 
-.main-content .logout-button a, .create-new-company .logout-button a, .gap .logout-button a, .gap-intro .logout-button a{
+.main-content .logout-button a, .create-new-company .logout-button a, .gap .logout-button a, .gap-intro .logout-button a,.gap-confirm .logout-button a, .gap-info .logout-button a{
   color: white;
 }
 
